--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,13 @@
-pandas==0.21.0
-networkx==2.0
-matplotlib==1.5.1
-scipy==1.0.0
-numpy==1.13.3
-ortools==6.5.4527
-torch==0.3.0.post4
+cycler==0.10.0
+kiwisolver==1.0.1
+matplotlib==2.2.0
+numpy==1.14.2
+pandas==0.22.0
+pyparsing==2.2.0
+python-dateutil==2.7.0
 python-dotenv==0.8.2
+pytz==2018.3
+PyYAML==3.12
+scipy==1.0.0
+six==1.11.0
+torch==0.3.0.post4
